fix the acceptance tests and add stock info as an endpoint
