# swagger/models/book_stock.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// BookStock A JSON object containing book stock information
+//
+// swagger:model BookStock
+type BookStock struct {
+
+	// checkedout
+	Checkedout int64 `json:"checkedout,omitempty"`
+
+	// copies
+	Copies int64 `json:"copies,omitempty"`
+
+	// instock
+	Instock bool `json:"instock,omitempty"`
+}
+
+// Validate validates this book stock
+func (m *BookStock) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this book stock based on context it is used
+func (m *BookStock) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *BookStock) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *BookStock) UnmarshalBinary(b []byte) error {
+	var res BookStock
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
