# swagger/restapi/operations/library_api.go
@@ -57,6 +57,9 @@ func NewLibraryAPI(spec *loads.Document) *LibraryAPI {
 		GetBookTitleHandler: GetBookTitleHandlerFunc(func(params GetBookTitleParams) middleware.Responder {
 			return middleware.NotImplemented("operation GetBookTitle has not yet been implemented")
 		}),
+		GetLibrarianUsernameBookTitleAuthorHandler: GetLibrarianUsernameBookTitleAuthorHandlerFunc(func(params GetLibrarianUsernameBookTitleAuthorParams) middleware.Responder {
+			return middleware.NotImplemented("operation GetLibrarianUsernameBookTitleAuthor has not yet been implemented")
+		}),
 		GetLibrarianUsernameUserUserHandler: GetLibrarianUsernameUserUserHandlerFunc(func(params GetLibrarianUsernameUserUserParams) middleware.Responder {
 			return middleware.NotImplemented("operation GetLibrarianUsernameUserUser has not yet been implemented")
 		}),
@@ -118,6 +121,8 @@ type LibraryAPI struct {
 	GetBookHandler GetBookHandler
 	// GetBookTitleHandler sets the operation handler for the get book title operation
 	GetBookTitleHandler GetBookTitleHandler
+	// GetLibrarianUsernameBookTitleAuthorHandler sets the operation handler for the get librarian username book title author operation
+	GetLibrarianUsernameBookTitleAuthorHandler GetLibrarianUsernameBookTitleAuthorHandler
 	// GetLibrarianUsernameUserUserHandler sets the operation handler for the get librarian username user user operation
 	GetLibrarianUsernameUserUserHandler GetLibrarianUsernameUserUserHandler
 	// PostBookHandler sets the operation handler for the post book operation
@@ -219,6 +224,9 @@ func (o *LibraryAPI) Validate() error {
 	}
 	if o.GetBookTitleHandler == nil {
 		unregistered = append(unregistered, "GetBookTitleHandler")
+	}
+	if o.GetLibrarianUsernameBookTitleAuthorHandler == nil {
+		unregistered = append(unregistered, "GetLibrarianUsernameBookTitleAuthorHandler")
 	}
 	if o.GetLibrarianUsernameUserUserHandler == nil {
 		unregistered = append(unregistered, "GetLibrarianUsernameUserUserHandler")
@@ -343,6 +351,10 @@ func (o *LibraryAPI) initHandlerCache() {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
 	o.handlers["GET"]["/book/{title}"] = NewGetBookTitle(o.context, o.GetBookTitleHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/librarian/{username}/book/{title}/{author}"] = NewGetLibrarianUsernameBookTitleAuthor(o.context, o.GetLibrarianUsernameBookTitleAuthorHandler)
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
